Team cards version 2

--- a/index.html
+++ b/index.html
@@ -14,103 +14,84 @@
   <body>
     <!--  -->
 
-    <main class="teams">
-      <div class="teams__info">
-        <h6 class="teams__info--mini-title">Our Creative Team</h6>
-
-        <h2 class="teams__info--title">Meet Our Team</h2>
-
-        <p class="teams__info--para">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse atque
-          repudiandae vel explicabo architecto sit earum.
+    <main class="team">
+      <div class="team__content">
+        <h6 class="team__content--mini-title">Our Creative Team</h6>
+        <h2 class="team__content--title">Mett Our Team</h2>
+        <p class="team__content--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
+          corrupti.
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing.</span>
         </p>
       </div>
 
-      <section class="teams__cards">
-        <div class="teams__cards--card">
-          <figure class="teams__cards--card__image">
-            <img loading="lazy" src="images/10.1.jpg" alt="" />
+      <section class="team__members">
+        <div class="team__members--member">
+          <figure class="team__members--member__img">
+            <img src="images/10.1.jpg" alt="Team Member" />
           </figure>
-
-          <h4 class="teams__cards--card__title">Gina Santos</h4>
-
-          <h5 class="teams__cards--card__profession">Marketing Expert</h5>
-
-          <p class="teams__cards--card__para">
-            Lorem ipsum dolor sit ,consectetur
-            <span> amet adipisicing elit.</span>
+          <h3 class="team__members--member__name">Gina Santos</h3>
+          <h5 class="team__members--member__role">Merketing Expert</h5>
+          <p class="team__members--member__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit
           </p>
-
-          <div class="teams__cards--card__icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
+          <div class="team__members--member__social">
+            <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
           </div>
         </div>
 
-        <div class="teams__cards--card">
-          <figure class="teams__cards--card__image">
-            <img loading="lazy" src="images/10.2.jpg" alt="" />
+        <div class="team__members--member">
+          <figure class="team__members--member__img">
+            <img loading="lazy" src="images/10.2.jpg" alt="Team Member" />
           </figure>
 
-          <h4 class="teams__cards--card__title">Julia Santos</h4>
-
-          <h5 class="teams__cards--card__profession">Digital Marketer</h5>
-
-          <p class="teams__cards--card__para">
-            Lorem ipsum dolor sit ,consectetur
-            <span> amet adipisicing elit.</span>
+          <h3 class="team__members--member__name">Julie Santos</h3>
+          <h5 class="team__members--member__role">Digital Marketer</h5>
+          <p class="team__members--member__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit
           </p>
-
-          <div class="teams__cards--card__icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
+          <div class="team__members--member__social">
+            <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
           </div>
         </div>
 
-        <div class="teams__cards--card">
-          <figure class="teams__cards--card__image">
-            <img loading="lazy" src="images/10.3.jpg" alt="" />
+        <div class="team__members--member">
+          <figure class="team__members--member__img">
+            <img loading="lazy" src="images/10.3.jpg" alt="Team Member" />
           </figure>
 
-          <h4 class="teams__cards--card__title">John Santos</h4>
-
-          <h5 class="teams__cards--card__profession">SEO Expert</h5>
-
-          <p class="teams__cards--card__para">
-            Lorem ipsum dolor sit ,consectetur
-            <span> amet adipisicing elit.</span>
+          <h3 class="team__members--member__name">John Santos</h3>
+          <h5 class="team__members--member__role">SEO Expert</h5>
+          <p class="team__members--member__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit
           </p>
-
-          <div class="teams__cards--card__icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
+          <div class="team__members--member__social">
+            <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
           </div>
         </div>
 
-        <div class="teams__cards--card">
-          <figure class="teams__cards--card__image">
-            <img loading="lazy" src="images/10.4.jpg" alt="" />
+        <div class="team__members--member">
+          <figure class="team__members--member__img">
+            <img loading="lazy" src="images/10.4.jpg" alt="Team Member" />
           </figure>
-
-          <h4 class="teams__cards--card__title">Mark Santos</h4>
-
-          <h5 class="teams__cards--card__profession">Creative Designer</h5>
-
-          <p class="teams__cards--card__para">
-            Lorem ipsum dolor sit ,consectetur
-            <span> amet adipisicing elit.</span>
+          <h3 class="team__members--member__name">Mark Santos</h3>
+          <h5 class="team__members--member__role">Creative Designer</h5>
+          <p class="team__members--member__desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit
           </p>
-
-          <div class="teams__cards--card__icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
+          <div class="team__members--member__social">
+            <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
           </div>
         </div>
